# Example-Installer-MSI-Template

./: README.md
NewInstallerTemplateMSI/: CMakeLists.txt  __build_msi_installer.bat  __build_msi_installer.sh  dll.rc  heatwave.wxs  msi_log.c  test_msi.c
TFMCfW_Example_MSI/: CMakeLists.txt  ___generate_msi_template.bat  ___generate_msi_template.sh  __build_msi_installer.bat  __build_msi_installer.sh  _configMSI.yml  _license.rtf  _template_generation.py  dll.rc  heatwave.wxs  msi_log.c  test_msi.c
TFMCfW_Example_MSI/Installer/: Installer_TFMCfW.msi  Installer_TFMCfW.wixpdb
